# doc-ai

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
agent/: AGENT_SPEC.md  base.py
agent/memory/: MEMORY_SPEC.md  base.py
agent/memory/implementations/: memory.py
agent/tool/: TOOL_SPEC.md  base.py
agent/tool/implementations/: default.py
backends/: BACKENDS_SPEC.md  BACKEND_SPEC.md
backends/blob/: BLOB_BACKEND_SPEC.md  base.py
backends/blob/implementations/: memory.py
backends/graph/: GRAPH_BACKEND_SPEC.md  base.py
backends/graph/implementations/: memory.py
backends/record/: RECORD_BACKEND_SPEC.md  SPEC.md  base.py  enums.py  models.py  serializer.py
backends/record/implementations/: memory.py
backends/vector/: SPEC.md  VECTOR_BACKEND_SPEC.md  base.py  models.py
backends/vector/implementations/: memory.py
common/: COMMON_SPEC.md  models.py
libs/: LIBS_SPEC.md  LIB_SPEC.md
libs/chunker/: CHUNKER_SPEC.md  SPEC.md  base.py  registry.py
libs/chunker/implementations/: sliding_window.py
libs/chunker/splitter/: SPLITTER_SPEC.md
libs/common/: enums.py  models.py
libs/detector/: DETECTOR_LIB_SPEC.md  base.py
libs/detector/implementations/: default.py
libs/distiller/: DISTILLER_SPEC.md  base.py  registry.py
libs/distiller/analyzer/: ANALYZER_SPEC.md  base.py  models.py
libs/distiller/composer/: COMPOSER_SPEC.md  base.py  models.py
libs/distiller/implementations/: glossary.py
libs/embedder/: DETECTOR_LIB_SPEC.md
libs/embedder/implementations/: random.py
libs/indexer/: INDEXER_SPEC.md  SPEC.md  base.py  registry.py
libs/indexer/embedder/: EMBEDDER_SPEC.md  (+1 more)
libs/language/: __init__.py  base.py
libs/merger/: MERGER_LIB_SPEC.md  MERGER_SPEC.md  base.py  registry.py
libs/parser/: PARSER_LIB_SPEC.md  PARSER_SPEC.md  SPEC.md  base.py  registry.py
libs/postprocessor/: SPEC.md
libs/profiler/: PROFILER_SPEC.md  SPEC.md  __init__.py  base.py  detector.py  models.py  registry.py
libs/reducer/: SPEC.md  base.py  models.py
libs/splitter/: SPEC.md  SPLITTER_LIB_SPEC.md  base.py
libs/text/: base.py
pipelines/: PIPELINES_SPEC.md  PIPELINE_SPEC.md
pipelines/ingestion/: INGESTION_SPEC.md  base.py  serializers.py
tests/: conftest.py
(+74 files in other folders)
